fix: use minor version bump to avoid npm conflicts
- Change from patch to minor version for master releases
- This prevents E403 errors when previously published versions exist
- 1.0.x versions already exist, bump to 1.1.0

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -200,10 +200,10 @@ jobs:
             # Next release - use prerelease
             npm version prerelease --preid=next -m "chore: release %s"
           else
-            # Release from master/main - use patch version
-            npm version patch -m "chore: release %s"
+            # Release from master/main - use minor version (to avoid conflicts)
+            npm version minor -m "chore: release %s"
           fi
-          
+
           echo "New version: $(node -p 'require(\"./package.json\").version')"
 
       - name: Publish native renderer package
