fix: use macos-13 for x64 build (macos-latest is now ARM64)

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -37,7 +37,7 @@ jobs:
             platform: linux-arm64
             target: aarch64-unknown-linux-gnu
             
-          - os: macos-latest
+          - os: macos-13
             platform: macos-x64
             target: x86_64-apple-darwin
             
