--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -37,7 +37,7 @@ jobs:
             platform: linux-arm64
             target: aarch64-unknown-linux-gnu
             
-          - os: macos-13
+          - os: macos-15-intel
             platform: macos-x64
             target: x86_64-apple-darwin
             
